--- a/RUBIK_CUBE_(C++)/RUBIK_CUBE_(C++).vcxproj
+++ b/RUBIK_CUBE_(C++)/RUBIK_CUBE_(C++).vcxproj
@@ -124,6 +124,9 @@
     <ClInclude Include="Face.h" />
     <ClInclude Include="Tools.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.gitignore" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
